# philharmonic

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  Makefile  README.md  Snakefile  Snakefile-param-sweep  Snakefile_slurm  config.yml  config_colab.yml  config_slurm.yml  env.yml  environment.yml  pyproject.toml
.github/workflows/: ci-cd.yml
assets/: go_filter.txt  go_level1.csv  go_level2.csv  go_level2_marked-up.csv  philharmonic_styles.xml
configs/: cgor_to_csv.yaml  config.yml  dmel_to_csv.yaml  pdam_to_csv.yaml
data/: pdam_shortlist.txt  pdam_shortlist_go.txt  protein_seqs.fasta  protein_seqs_700.fasta
data_old/: Pdam.clusters.csv  Pdam.clusters.json  Pdam.clusters.small.functional.json  Pdam.clusters.small.json  Pdam_cluster_graph.csv  Pdam_cluster_graph_nodes.csv  Pdam_recipe_cluster_graph.csv  Pdam_recipe_cluster_graph_nodes.csv  goslim_generic.obo  pdam_candidate_proteins.txt
dev/: Philharmonic.ipynb  README.md  clustering.py  philharmonic.ipynb  philharmonic_cluster.ipynb  philharmonic_cluster_old.py  philharmonic_func.ipynb  philharmonic_langchain.py  philharmonic_viz.ipynb  results_convert.py  script-bag.sh  shortlist_species_proteins.py  styles.xml  subset_GO_graph.py  test.csv
dev/ReCIPE/: cluster_class.py  degreelist_class.py  matrix_class.py  recipe.py  recipe_utils.py
nb/: 00_run_philharmonic.ipynb  01_result_summary.ipynb  01_result_summary.ipynb_explained.ipynb  02.2_fly_functional_permutation_analysis.ipynb  02_functional_permutation_analysis.ipynb  02_functional_permutation_test.ipynb  03_gene_expression_analysis.ipynb  03_gprofiler_analysis.ipynb  04.2_fly_gene_expression_analysis.ipynb  04_gene_expression_analysis.ipynb  04_gprofiler_analysis.ipynb  05_cross_species_analysis.ipynb  05_recipe_validation.ipynb  06_alternate_clusterings.ipynb  06_alternate_clusterings_and_params.ipynb  06_recipe_validation.ipynb  07_cross_species_analysis.ipynb  08_string_network_comparison.ipynb  Analyze Cross-Species Network.ipynb  Clusters to Fasta.ipynb  Clusters_to_gProfiler_ID.ipynb  Connelly_Correlation_Analysis.ipynb  Connelly_DiffExp_Analaysis.ipynb  Cross Species Localization.ipynb  Network Analysis Coral.ipynb  Network Analysis Fly.ipynb
philharmonic/: 01_result_summary.ipynb  02_functional_permutation_test.ipynb  __init__.py  __main__.py  add_cluster_functions.py  build_cluster_graph.py  build_cytoscape.py  build_go_map.py  cluster_network.py  conduct.py  generate_candidates.py  json_to_csv.py  llm_name.py  summarize_clusters.py  utils.py  write_protein_table.py
scripts/: 02_functional_permutation_diff_cluster.py  02_functional_permutation_param_sweep.py
slurm_profile/: config.v8+.yaml
src/: 01_result_summary.ipynb  add_cluster_functions.py  build_cluster_graph.py  build_cytoscape.py  build_go_map.py  cluster_network.py  generate_candidates.py  name_clusters.py  philharmonic_analysis.py  philharmonic_cluster.py  philharmonic_go.py  summarize_clusters.py  utils.py
tests/: test_conduct.py  test_utils.py
