[tool.poetry]
name = "philharmonic"
version = "0.7.0"
description = "Decoding functional organization in non-model organisms"
authors = ["Samuel Sledzieski <samsl@mit.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
biopython = "^1.84"
numpy = "^2.1.2"
hmmer = "^3.4.0.0"
matplotlib = "^3.9.2"
networkx = "^3.4.2"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
scipy = "^1.14.1"
seaborn = "^0.13.2"
tqdm = "^4.66.5"
llm = "^0.16"
loguru = "^0.7.2"
typer = "^0.12.5"
regex = "^2024.9.11"
snakemake = [
    {version = "^8.24.0", python = ">=3.11"},
    {version = "^7.0", python = ">=3.8,<3.11"}
]
dscript = "^0.2.8"
fastdsd = "^1.0.1"
huggingface-hub = "^0.26.1"
recipe-cluster = "^0.0.4"
transformers = "^4.45.2"

[tool.poetry.group.dev.dependencies]
pip = "^24.2"
jupyter = "^1.1.1"
jupyterlab = "^4.2.5"
pre-commit = "^4.0.1"
ruff = "^0.7.0"
mypy = "^1.13.0"

[tool.poetry.group.colab.dependencies]
loguru = "^0.7.2"
biopython = "^1.84"

[tool.poetry.scripts]
philharmonic = "philharmonic.__main__:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
