[tool.poetry]
name = "philharmonic"
version = "0.9.0"
description = "Decoding functional organization in non-model organisms"
authors = ["Samuel Sledzieski <samsl@mit.edu>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/samsledje/philharmonic"

[tool.poetry.dependencies]
python = "^3.10"
biopython = "^1.84"
numpy = [
    {version = "^2.1.2", python = ">=3.11"},
    {version = "^1.26.4", python = ">=3.8,<3.11"},
]
hmmer = "^3.4.0.0"
matplotlib = "^3.9.2"
networkx = "^3.4.2"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
scipy= [
    {version = "^1.14.1", python = ">=3.11"},
    {version = "1.13.1", python = ">=3.8,<3.11"},
]
seaborn = "^0.13.2"
tqdm = "^4.66.5"
llm = "^0.16"
loguru = "^0.7.2"
typer = "^0.12.5"
regex = "^2024.9.11"
pulp= [
    {version = "^2.9.0", python = ">=3.11"},
    {version = "2.7.0", python = ">=3.8,<3.11"},
]
snakemake = [
    {version = "^8.24.0", python = ">=3.11"},
    {version = "^7.0", python = ">=3.8,<3.11"}
]
dscript = "0.2.8"
fastdsd = "^1.0.1"
huggingface-hub = "^0.26.1"
recipe-cluster = "^0.0.4"
tornado = "^6.4.2"
transformers = "^4.45.2"


[tool.poetry.group.dev.dependencies]
pip = "^24.2"
jupyter = "^1.1.1"
jupyterlab = "^4.2.5"
pre-commit = "^4.0.1"
ruff = "^0.7.0"
mypy = "^1.13.0"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[tool.poetry.group.colab.dependencies]
loguru = "^0.7.2"
biopython = "^1.84"

[tool.poetry.group.hpc.dependencies]
snakemake-executor-plugin-slurm = {markers = "python_version >= '3.11'", version = "^0.11.2"}

[tool.poetry.scripts]
philharmonic = "philharmonic.__main__:app"

[tool.ruff]
target-version = "py311"
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501", "C"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
addopts = "--cov=philharmonic --cov-report=term-missing"
testpaths = ["tests"]

[tool.dunamai]
style = "pep440"
formats = {tagged = "{base}", distance = "{base}.dev{distance}+{commit}", dirty = "{base}.dev{distance}+{commit}.dirty"}

[build-system]
requires = ["poetry-core>=1.0.0", "dunamai>=1.19.0"]
build-backend = "poetry.core.masonry.api"
